Clean gitignore and remove IDE, logs, and data from tracking

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -2,85 +2,246 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2025-11-29T15:07:31.224190Z",
      "start_time": "2025-11-29T15:07:31.146686Z"
-    }
+    },
+    "collapsed": true
    },
-   "source": "",
    "outputs": [],
-   "execution_count": 2
+   "source": [
+    "d={\"key\":\"value\"}"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "af4995a4855827da",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-11-29T15:16:48.665755Z",
      "start_time": "2025-11-29T15:16:47.175466Z"
     }
    },
-   "cell_type": "code",
-   "source": "d.key",
-   "id": "af4995a4855827da",
    "outputs": [
     {
      "ename": "AttributeError",
      "evalue": "'dict' object has no attribute 'key'",
      "output_type": "error",
      "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[3], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43md\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mkey\u001B[49m\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'dict' object has no attribute 'key'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43md\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkey\u001b[49m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'key'"
      ]
     }
    ],
-   "execution_count": 3
+   "source": [
+    "d.key"
+   ]
   },
   {
-   "metadata": {
-    "jupyter": {
-     "is_executing": true
-    }
-   },
    "cell_type": "code",
-   "source": "from box import ConfigBox",
+   "execution_count": 2,
    "id": "6736806dea229331",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
    "metadata": {
     "jupyter": {
      "is_executing": true
     }
    },
-   "cell_type": "code",
-   "source": "import gdown\n",
-   "id": "eae9f4e8f50e63d7",
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "from box import ConfigBox"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "eae9f4e8f50e63d7",
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import gdown\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "56cf50b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_prodict(x:int,y:int)-> int:\n",
+    "    return x*y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a4a6c86c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'33'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_prodict(x=2,y=\"3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e5a823cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ensure import ensure_annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bdde0815",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@ensure_annotations\n",
+    "def get_prodict(x:int,y:int)-> int:\n",
+    "    return x*y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a68bf28c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "EnsureError",
+     "evalue": "Argument y of type <class 'str'> to <function get_prodict at 0x000001DDA7F26EE0> does not match annotation type <class 'int'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mEnsureError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_prodict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43my\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m3\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\gk414\\anaconda3\\envs\\kidney_tf\\lib\\site-packages\\ensure\\main.py:845\u001b[0m, in \u001b[0;36mWrappedFunctionReturn.__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    840\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(value, templ):\n\u001b[0;32m    841\u001b[0m         msg \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m    842\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mArgument \u001b[39m\u001b[38;5;132;01m{arg}\u001b[39;00m\u001b[38;5;124m of type \u001b[39m\u001b[38;5;132;01m{valt}\u001b[39;00m\u001b[38;5;124m to \u001b[39m\u001b[38;5;132;01m{f}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    843\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdoes not match annotation type \u001b[39m\u001b[38;5;132;01m{t}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    844\u001b[0m         )\n\u001b[1;32m--> 845\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m EnsureError(msg\u001b[38;5;241m.\u001b[39mformat(\n\u001b[0;32m    846\u001b[0m             arg\u001b[38;5;241m=\u001b[39marg, f\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mf, t\u001b[38;5;241m=\u001b[39mtempl, valt\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mtype\u001b[39m(value)\n\u001b[0;32m    847\u001b[0m         ))\n\u001b[0;32m    849\u001b[0m return_val \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mf(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    850\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(return_val, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreturn_templ):\n",
+      "\u001b[1;31mEnsureError\u001b[0m: Argument y of type <class 'str'> to <function get_prodict at 0x000001DDA7F26EE0> does not match annotation type <class 'int'>"
+     ]
+    }
+   ],
+   "source": [
+    "get_prodict(x=2,y=\"3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6c7ce115",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#download data\n",
+    "import gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d9aaa2f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url=\"https://drive.google.com/file/d/1l-OBE2ht1O5nBuwbEhEthlfbOF6-WkVZ/view?usp=sharing\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d62555eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1l-OBE2ht1O5nBuwbEhEthlfbOF6-WkVZ'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_id=url.split(\"/\")[-2]\n",
+    "file_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "dedd4d4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1l-OBE2ht1O5nBuwbEhEthlfbOF6-WkVZ\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1l-OBE2ht1O5nBuwbEhEthlfbOF6-WkVZ&confirm=t&uuid=36fe1e90-6020-43f6-9fd1-c855f41ae613\n",
+      "To: c:\\Users\\gk414\\PycharmProjects\\Kidney-Disease-Classification-Deep-Learning-Project\\research\\kidney-CT-Scan-data.zip\n",
+      "100%|██████████| 47.2M/47.2M [00:07<00:00, 6.49MB/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'kidney-CT-Scan-data.zip'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix=\"https://drive.google.com/uc?/export=download&id=\"\n",
+    "gdown.download(prefix+file_id,\"kidney-CT-Scan-data.zip\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (kidney)",
+   "display_name": "kidney_tf",
    "language": "python",
-   "name": "kidney"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.25"
   }
  },
  "nbformat": 4,
