Add MLflow evaluation stage, fix config and update gitignore

--- a/research/04_model_evaluation_with_mlflow.ipynb
+++ b/research/04_model_evaluation_with_mlflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e149f8b0",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "94a7df7e",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "'c:\\\\Users\\\\gk414\\\\PycharmProjects\\\\Kidney-Disease-Classification-Deep-Learning-Project\\\\research'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f77d409a",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bec3395b",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "'c:\\\\Users\\\\gk414\\\\PycharmProjects\\\\Kidney-Disease-Classification-Deep-Learning-Project'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,19 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "565f87d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"MLFLOW_TRACKING_URI\"]=\"https://dagshub.com/entbappy/Kidney-Disease-Classification-MLflow-DVC.mlflow\"\n",
-    "os.environ[\"MLFLOW_TRACKING_USERNAME\"]=\"entbappy\"\n",
-    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"]=\"6824692c47a369aa6f9eac5b10041d5c8edbcef0\""
+    "os.environ[\"MLFLOW_TRACKING_URI\"]=\"https://dagshub.com/gautam49021/Kidney-Disease-Classification-Deep-Learning-Project.mlflow\"\n",
+    "os.environ[\"MLFLOW_TRACKING_USERNAME\"]=\"gautam49021\"\n",
+    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"]=\"12a6ebdd707bb2353e59290bca39528fd12e32d8\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9b8ea7da",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "78e3edd9",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d31304c5",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6d2a1244",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7695ded4",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
     "        eval_config = EvaluationConfig(\n",
     "            path_of_model=\"artifacts/training/model.h5\",\n",
     "            training_data=\"artifacts/data_ingestion/kidney-ct-scan-image\",\n",
-    "            mlflow_uri=\"https://dagshub.com/entbappy/Kidney-Disease-Classification-MLflow-DVC.mlflow\",\n",
+    "            mlflow_uri=\"https://dagshub.com/gautam49021/Kidney-Disease-Classification-Deep-Learning-Project.mlflow\",\n",
     "            all_params=self.params,\n",
     "            params_image_size=self.params.IMAGE_SIZE,\n",
     "            params_batch_size=self.params.BATCH_SIZE\n",
@@ -156,10 +156,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "43b5231b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gk414\\anaconda3\\envs\\kidney_tf\\lib\\site-packages\\mlflow\\utils\\requirements_utils.py:12: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  import pkg_resources\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from pathlib import Path\n",
@@ -170,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "523a4d16",
    "metadata": {},
    "outputs": [],
@@ -244,10 +253,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "7741def5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2026-01-08 13:18:16,446: INFO: common: yaml file: config\\config.yaml loaded successfully]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2026-01-08 13:18:16,460: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2026-01-08 13:18:16,468: INFO: common: created directory at: artifacts]\n",
+      "Found 130 images belonging to 2 classes.\n",
+      "9/9 [==============================] - 25s 3s/step - loss: 16.1487 - accuracy: 0.5077\n",
+      "[2026-01-08 13:18:43,044: INFO: common: json file saved at: scores.json]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026/01/08 13:18:44 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2026-01-08 13:18:49,975: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 13). These functions will not be directly callable after loading.]\n",
+      "INFO:tensorflow:Assets written to: C:\\Users\\gk414\\AppData\\Local\\Temp\\tmp7n0cpwbg\\model\\data\\model\\assets\n",
+      "[2026-01-08 13:18:51,376: INFO: builder_impl: Assets written to: C:\\Users\\gk414\\AppData\\Local\\Temp\\tmp7n0cpwbg\\model\\data\\model\\assets]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Registered model 'VGG16Model' already exists. Creating a new version of this model...\n",
+      "2026/01/08 13:20:08 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 5\n",
+      "Created version '5' of model 'VGG16Model'.\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
